--- a/Client Side App/verisons/v1.0/index.html
+++ b/Client Side App/verisons/v1.0/index.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript" src="javascript/scripts.js"></script> 
 	 
 	<!-- <script type="text/javascript" src="j/jquery-1.9.0.min.js"></script> -->
-	<body onload="test()">
+	<body onload="main()">
 </head>
 <body>
 
