Added a loop and all stats now work

--- a/Client Side App/verisons/v1.0/index.html
+++ b/Client Side App/verisons/v1.0/index.html
@@ -30,7 +30,7 @@
 	
  <!-- <button onclick ='try{changeOnPageStats()}catch(e){alert(e)}' type="button" id = "tempButton" >testing!</button> -->
 	
-	<section class="livestats">		
+	<section id = "liveStats" class="livestats">		
 
 		<section id ="speed">
 			<h2>Speed</h2>
@@ -68,30 +68,30 @@
 
 	<footer>
 		<ul>
-			<li>Rev <p id = "Rev" > 66 </p> </li>
-			<li>Gear <p id = "Gear"> </li>
-			<li>Speed</li>
-			<li>Throttle</li>
+			<li>Rev <p id = "revStatFoot" >   </p> </li>
+			<li>Gear <p id = "gearStatFoot">  </p> </li>
+			<li>Speed <p id = "speedStatFoot">  </p></li>
+			<li>Throttle <p id = "throttleStatFoot">  </p></li>
 
-			<li>Front Right Wheel RPM</li>
-			<li>Front Left Wheel RPM</li>
-			<li>Rear Right Wheel RPM</li>
-			<li>Rear Left Wheel RPM</li>
+			<li>Front Right Wheel RPM <p id = "FRrpmStatFoot">  </p></li>
+			<li>Front Left Wheel RPM <p id = "FLrpmStatFoot">  </p></li>
+			<li>Rear Right Wheel RPM <p id = "RRrpmStatFoot">  </p></li>
+			<li>Rear Left Wheel RPM <p id = "RLrpmStatFoot">  </p></li>
 			
-			<li>RPM </li>
-			<li>Air Temp &deg;C</li>		
-			<li>Coolent Temp &deg;C</li>
-			<li>Lambda</li>
+			<li>RPM <p id = "rpmStatFoot">  </p> </li>
+			<li>Air Temp &deg;C <p id = "airTempStatFoot">  </p></li>		
+			<li>Coolent Temp &deg;C <p id = "coolentTempStatFoot">  </p></li>
+			<li>Lambda <p id = "lambdaStatFoot">  </p></li>
 			
-			<li>Suspension1</li>
-			<li>Suspension2</li>
-			<li>Suspension3</li>
-			<li>Suspension4</li>
+			<li>Suspension1 <p id = "suspen1StatFoot">  </p></li>
+			<li>Suspension2 <p id = "suspen2StatFoot">  </p></li>
+			<li>Suspension3 <p id = "suspen3StatFoot">  </p></li>
+			<li>Suspension4 <p id = "suspen4StatFoot">  </p></li>
 
-			<li>G-Force X</li>
-			<li>G-Force Y</li>
-			<li>Battery &#37;</li>
-			<li>Battery Temp &deg;C</li>
+			<li>G-Force X <p id = "gForceXStatFoot">  </p></li>
+			<li>G-Force Y <p id = "gForceYStatFoot">  </p></li>
+			<li>Battery &#37; <p id = "batteryStatFoot">  </p></li>
+			<li>Battery Temp &deg;C <p id = "batteryTempStatFoot">  </p></li>
 			
 			
 			
