Made it able to zoom in

--- a/Client Side App/verisons/v2.0/v1.0/index.html
+++ b/Client Side App/verisons/v2.0/v1.0/index.html
@@ -24,7 +24,7 @@
 		<h1>Car Statistics</h1>
 	</header>
 
-	<section class="graph">
+	<section class="graph"  onclick = "changeGraphSize()" id = "graph">
 		<div id="visualization"></div>
 	</section>
 	
